[package]
name = "conntest"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
log = "0.4.22"
reqwest = "0.12"
simplelog = "0.12.2"
tokio = { version = "1", features = [
    "fs",
    "macros",
    "net",
    "io-std",
    "io-util",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
    "test-util",
] }
